--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -45,7 +45,7 @@ ${self.searchForm()}
                 <div class="text">Search collectors via filters</div>
             </div><div class="home-icons">
                 <div class="home-icon buy"></div>
-                <div class="text">Buy profiles at 19&euro; each</div>
+                <div class="text">Buy profiles from &#36;9.50 each</div>
             </div><div class="home-icons">
                 <div class="home-icon view"></div>
                 <div class="text">View collectors' profiles</div>
@@ -97,7 +97,7 @@ ${self.searchForm()}
     <div id="pricing" class="index-pane">
         <div class="panel text panel-left">
             <div class="panel-content">
-                <h3>One Profile = 19 &euro;<br />Simple.</h3>
+                <h3>One Profile = from &#36;9.50 <br />Simple.</h3>
                 <p>We created a fair and simple pricing model. You can either pay per profile or you can buy credits for purchases at a later date.</p>
                 <p>You will be able to see the purchased profiles for a year, including all updates.</p>
             </div>
