--- a/webapp/larryslist/website/templates/cart/plan_select.html
+++ b/webapp/larryslist/website/templates/cart/plan_select.html
@@ -24,7 +24,7 @@
                         <div><a href="#" class="expiry-link">Will the credits expire?</a></div>
                         <div>1 credit = 1 profile</div>
                         <div>All purchases are final with no refunds.</div>
-                        <div>Currency is Euro</div>
+                        <div>Payments can be made in HKD or USD.</div>
                     </div>
                 </form>
             </div>
