Meta-Tags NoIndex Link-fixes [art-collector-report]

--- a/webapp/larryslist/website/templates/cart/plan_select.html
+++ b/webapp/larryslist/website/templates/cart/plan_select.html
@@ -1,4 +1,4 @@
-<%inherit file="../layout.html"/>
+<%inherit file="../layout_noindex.html"/>
 <%namespace file="larryslist:lib/formlib/templates/baseform.html" name="baseform"/>
 
 <%def name="content()">
