--- a/webapp/larryslist/website/templates/layout_meta.html
+++ b/webapp/larryslist/website/templates/layout_meta.html
@@ -1,4 +1,4 @@
-<%inherit file="base.html"/>
+<%inherit file="base_meta.html"/>
 
 <div id="global-frame" class="${self.pageClass()}">
     <%block name="header">
