--- a/webapp/larryslist/website/templates/auth/form.html
+++ b/webapp/larryslist/website/templates/auth/form.html
@@ -1,4 +1,4 @@
-<%inherit file="../layout_noindex.html"/>
+<%inherit file="../layout.html"/>
 <%namespace file="larryslist:lib/formlib/templates/baseform.html" name="baseform"/>
 
 
