--- a/webapp/larryslist/website/templates/search/index.html
+++ b/webapp/larryslist/website/templates/search/index.html
@@ -1,4 +1,4 @@
-<%inherit file="../layout_noindex.html"/>
+<%inherit file="../layout.html"/>
 <%def name="pageClass()">search-page-container</%def>
 
 <%def name="content()">${self.searchBody(False)}</%def>
