--- a/webapp/larryslist/website/templates/layout.html
+++ b/webapp/larryslist/website/templates/layout.html
@@ -37,7 +37,7 @@
                     <h4>Services</h4>
                     <ul class="unstyled">
                         <li><a href="http://artmarket.larryslist.com" class="footer-link" target="_blank">Blog</a></li>
-                        <li><a href="/art-collector-report" class="footer-link">Collector Report</a></li>
+                        <li><a href="/collector-report" class="footer-link">Collector Report</a></li>
                     </ul>
                 </div>
                 <div class="span2">
@@ -77,7 +77,7 @@
 <%def name="menu(user)">
     <ul class="nav">
         <li class="nav-entry"><a class="nav-entry-link" href="http://artmarket.larryslist.com"  target="_blank">Blog</a></li>
-        <li class="nav-entry"><a class="nav-entry-link" href="/art-collector-report">Collector Report</a></li>
+        <li class="nav-entry"><a class="nav-entry-link" href="/collector-report">Collector Report</a></li>
     </ul>
 
 
