--- a/webapp/larryslist/website/templates/worldpay/FOOTER.html
+++ b/webapp/larryslist/website/templates/worldpay/FOOTER.html
@@ -61,7 +61,7 @@
             <div class="span2"><h4>Services</h4>
                 <ul class="unstyled">
                     <li><a href="//78.47.55.182" class="footer-link">Blog</a></li>
-                    <li><a href="http://www.larryslist.de/art-collector-report" class="footer-link">Collector Report</a>
+                    <li><a href="http://www.larryslist.de/collector-report" class="footer-link">Collector Report</a>
                     </li>
                 </ul>
             </div>
