--- a/webapp/larryslist/website/templates/worldpay/resultY.html
+++ b/webapp/larryslist/website/templates/worldpay/resultY.html
@@ -53,7 +53,7 @@
                     <h4>Services</h4>
                     <ul class="unstyled">
                         <li><a href="//78.47.55.182" class="footer-link">Blog</a></li>
-                        <li><a href="http://www.larryslist.com/art-collector-report" class="footer-link">Collector Report</a></li>
+                        <li><a href="http://www.larryslist.com/collector-report" class="footer-link">Collector Report</a></li>
                     </ul>
                 </div>
                 <div class="span2">
