--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -18,7 +18,7 @@ ${self.searchForm()}
             <div class="span12">
                 <div class="counter-band-content">
                     <h3>The only art collector database,</h3>
-                    <p>currently containing <b class="count-suffix">${vctxt.config.ReviewedCollectors.no} Collector profiles*.</b>
+                    <p>currently containing <b class="count-suffix">${vctxt.config.ReviewedCollectors.no} Collector profiles(*).</b>
                     <br/>
                     <a class="link" style="font-size:60%;color:black;" data-toggle="modal" data-target="#data-collector-artist">(* Information for Artists and Collectors)</a>
                     </p>
