static links, bug fixes

--- a/webapp/larryslist/website/static/bootstrap/modals.less
+++ b/webapp/larryslist/website/static/bootstrap/modals.less
@@ -68,6 +68,10 @@
 .modal-body {
   position: relative;
   padding: 30px 30px 15px;
+  max-height:480px;
+  overflow-y: auto;
+  touch-overflow: scroll;
+  .box-sizing(border-box);
   background-color: #f8f8f8;
 }
 // Remove bottom margin if need be
