--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -252,6 +252,9 @@ remaining five criteria only the highest four criteria count for the final sourc
                         </label>
                         <div class="controls typeahead" data-api-url="/api/0.0.1/web/search/addressTypeAhead" data-api-result="TypeAhead">
                             <div class="search-field"><input type="hidden" class="key"/><input type="text" class="input-fullwidth query field-where" autocomplete="off"/></div>
+                            <span class="help-block show-on-error">
+                                Unknown city or country, please check and retype.
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -262,6 +265,9 @@ remaining five criteria only the highest four criteria count for the final sourc
                         </label>
                         <div class="controls typeahead" data-api-url="/api/0.0.1/web/search/typeahead" data-api-key="ARTIST" data-api-result="TypeAhead">
                             <div class="search-field"><input type="hidden" class="key"/><input type="text" class="input-fullwidth query field-who" autocomplete="off"/></div>
+                            <span class="help-block show-on-error">
+                                Unknown artist, please check and retype.
+                            </span>
                         </div>
                     </div>
                 </div>
