--- a/webapp/larryslist/website/templates/layout.html
+++ b/webapp/larryslist/website/templates/layout.html
@@ -36,25 +36,25 @@
                 <div class="span2">
                     <h4>Services</h4>
                     <ul class="unstyled">
-                        <li><a href="http://artmarket.larryslist.com" class="footer-link" target="_blank">Blog</a></li>
-                        <li><a href="/art-collector-report" class="footer-link">Collector Report</a></li>
+                        <li><a href="/artmarket" class="footer-link" target="_blank">Blog</a></li>
+                        <li><a href="/artmarket/art-collector-report" class="footer-link">Collector Report</a></li>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Info</h4>
                     <ul class="unstyled">
-                        <li><a href="/faq" class="footer-link">FAQ</a></li>
-                        <a href="/careers" class="footer-link">Career</a>
-                        <li><a href="/privacy" class="footer-link">Privacy</a></li>
-                        <a href="/impressum" class="footer-link">Impressum</a>
+                        <li><a href="/artmarket/faq" class="footer-link">FAQ</a></li>
+                        <a href="/artmarket/careers" class="footer-link">Career</a>
+                        <li><a href="/artmarket/privacy" class="footer-link">Privacy</a></li>
+                        <a href="/artmarket/impressum" class="footer-link">Impressum</a>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Corporate</h4>
                     <ul class="unstyled">
-                        <li><a href="/press" class="footer-link">Press</a></li>
-                        <li><a href="/contact" class="footer-link">Contact</a></li>
-                        <li><a href="/terms" class="footer-link">Terms & Conditions</a></li>
+                        <li><a href="/artmarket/press" class="footer-link">Press</a></li>
+                        <li><a href="/artmarket/contact" class="footer-link">Contact</a></li>
+                        <li><a href="/artmarket/terms" class="footer-link">Terms & Conditions</a></li>
                     </ul>
                 </div>
                 <div class="span4">
@@ -76,8 +76,8 @@
 
 <%def name="menu(user)">
     <ul class="nav">
-        <li class="nav-entry"><a class="nav-entry-link" href="http://artmarket.larryslist.com"  target="_blank">Blog</a></li>
-        <li class="nav-entry"><a class="nav-entry-link" href="/art-collector-report">Collector Report</a></li>
+        <li class="nav-entry"><a class="nav-entry-link" href="/artmarket"  target="_blank">Blog</a></li>
+        <li class="nav-entry"><a class="nav-entry-link" href="/artmarket/art-collector-report">Collector Report</a></li>
     </ul>
 
 
