--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -1,10 +1,10 @@
 <%inherit file="layout.html"/>
 
+<%block name="title">Art Collector Ranking – The Art Collector and Artist Search for an Art Gallery – Larry‘s List</%block>
 <%block name='extra_head'>
     <meta name="title" content="Art Collector Ranking – The Art Collector and Artist Search for an Art Gallery – Larry‘s List">
     <meta name="description" content="Larryslist.com – the world‘s first art collector search for an art gallery. Sell paintings, contemporary art, pop art and posters to art collectors . Larry‘s List art collector report is the only art market research that creates a reliable art collector ranking.">
     <meta name="keywords" content="Art, Collector, Art Collector, Art Gallery, Artist, Search, Interviews, Phone Number, Art Market, Report, Insight, Ranking, Database, Collector Report, paintings, contemporary art, pop art, posters">
-    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 </%block>
 
 <%block name="scripts">
