--- a/webapp/larryslist/website/templates/worldpay/resultY.html
+++ b/webapp/larryslist/website/templates/worldpay/resultY.html
@@ -53,24 +53,24 @@
                     <h4>Services</h4>
                     <ul class="unstyled">
                         <li><a href="//78.47.55.182" class="footer-link">Blog</a></li>
-                        <li><a href="http://www.larryslist.com/artmarket/art-collector-report" class="footer-link">Collector Report</a></li>
+                        <li><a href="http://www.larryslist.com/art-collector-report" class="footer-link">Collector Report</a></li>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Info</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.com/artmarket/faq" class="footer-link">FAQ</a></li>
-                        <a href="http://www.larryslist.com/artmarket/careers" class="footer-link">Career</a>
-                        <li><a href="http://www.larryslist.com/artmarket/privacy" class="footer-link">Privacy</a></li>
-                        <a href="http://www.larryslist.com/artmarket/impressum" class="footer-link">Impressum</a>
+                        <li><a href="http://www.larryslist.com/faq" class="footer-link">FAQ</a></li>
+                        <a href="http://www.larryslist.com/careers" class="footer-link">Career</a>
+                        <li><a href="http://www.larryslist.com/privacy" class="footer-link">Privacy</a></li>
+                        <a href="http://www.larryslist.com/impressum" class="footer-link">Impressum</a>
                     </ul>
                 </div>
                 <div class="span2">
                     <h4>Corporate</h4>
                     <ul class="unstyled">
-                        <li><a href="http://www.larryslist.com/artmarket/press" class="footer-link">Press</a></li>
-                        <li><a href="http://www.larryslist.com/artmarket/contact" class="footer-link">Contact</a></li>
-                        <li><a href="http://www.larryslist.com/artmarket/terms" class="footer-link">Terms & Conditions</a></li>
+                        <li><a href="http://www.larryslist.com/press" class="footer-link">Press</a></li>
+                        <li><a href="http://www.larryslist.com/contact" class="footer-link">Contact</a></li>
+                        <li><a href="http://www.larryslist.com/terms" class="footer-link">Terms & Conditions</a></li>
                     </ul>
                 </div>
                 <div class="span4">
