payment skins back in resources, impressum, homepage text

--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -261,7 +261,7 @@ remaining five criteria only the highest four criteria count for the final sourc
                 <div class="span5">
                     <div class="control-group last">
                         <label class="control-label search-title">
-                            What artist are you looking for (start with first name)?
+                            What artist are you looking for?
                         </label>
                         <div class="controls typeahead" data-api-url="/api/0.0.1/web/search/typeahead" data-api-key="ARTIST" data-api-result="TypeAhead">
                             <div class="search-field"><input type="hidden" class="key"/><input type="text" class="input-fullwidth query field-who" autocomplete="off"/></div>
