--- a/webapp/larryslist/website/templates/layout.html
+++ b/webapp/larryslist/website/templates/layout.html
@@ -46,7 +46,7 @@
                         <li><a href="/faq" class="footer-link">FAQ</a></li>
                         <a href="/careers" class="footer-link">Career</a>
                         <li><a href="/privacy" class="footer-link">Privacy</a></li>
-                        <a href="/impressum" class="footer-link">Impressum</a>
+                        <a href="/impressum" class="footer-link">Imprint</a>
                     </ul>
                 </div>
                 <div class="span2">
