--- a/webapp/larryslist/website/templates/search/index.html
+++ b/webapp/larryslist/website/templates/search/index.html
@@ -1,6 +1,10 @@
 <%inherit file="../layout.html"/>
-<%def name="pageClass()">search-page-container</%def>
 
+
+<%block name='extra_head'>
+    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+</%block>
+<%def name="pageClass()">search-page-container</%def>
 <%def name="content()">${self.searchBody(False)}</%def>
 
 <%def name="searchBody(mineSelected = False)">
