Pictures on index

--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -37,6 +37,14 @@ ${self.searchForm()}
     </div>
 </div>
 
+<div class="front-page-press-logo">
+<img src="${STATIC_URL}img/press_forbes.jpg" style="float:left;"/>
+<img src="${STATIC_URL}img/press_bloomberg.jpg" style="float:left;"/>
+<img src="${STATIC_URL}img/press_chicagotribune.jpg" style="float:left;"/>
+<img src="${STATIC_URL}img/press_artmarketmonitor.jpg" style="float:left;"/>
+<img src="${STATIC_URL}img/press_artinfo.jpg" style="float:left;"/>
+</div>
+
 <div class="container">
     <div class="row">
         <div class="span12">
@@ -95,7 +103,7 @@ ${self.searchForm()}
         <div class="panel text panel-right">
             <div class="panel-content">
                 <h3>Unique Information on Art Collectors.</h3>
-                <p>We compiled detailed information on leading art collectors around the world. Our reserchers carefully selected the data manually. There is no other database like this.</p>
+                <p>We compiled detailed information on leading art collectors around the world. Our researchers carefully selected the data manually. There is no other database like this.</p>
                 <p><a class="link" data-toggle="modal" data-target="#data-profile-sample-modal">Here</a> is an example of a profile.</p>
             </div>
         </div>
