--- a/webapp/larryslist/website/static/less/index.less
+++ b/webapp/larryslist/website/static/less/index.less
@@ -30,6 +30,13 @@
     padding:  30px 20% 15px;
   }
 }
+.press-logos {
+img {
+	margin-left:10px;
+	margin-right:10px;
+	
+	}
+}
 .profile-count-band {
   xtext-align:center;
   background:#f3f3f3;
