--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -34,15 +34,21 @@ ${self.searchForm()}
                 </div>
             </div>
         </div>
+        <div class="row">
+          <div class="span12 press-logos">
+	  	    <img src="${STATIC_URL}img/press_forbes.jpg" style="float:left;"/>
+	  	    <img src="${STATIC_URL}img/press_bloomberg.jpg" style="float:left;"/>
+	  		<img src="${STATIC_URL}img/press_chicagotribune.jpg" style="float:left;"/>
+	  		<img src="${STATIC_URL}img/press_artinfo.jpg" style="float:left;"/>
+    	  </div>
+  		</div>
     </div>
 </div>
 
-<div class="front-page-press-logo">
-<img src="${STATIC_URL}img/press_forbes.jpg" style="float:left;"/>
-<img src="${STATIC_URL}img/press_bloomberg.jpg" style="float:left;"/>
-<img src="${STATIC_URL}img/press_chicagotribune.jpg" style="float:left;"/>
-<img src="${STATIC_URL}img/press_artinfo.jpg" style="float:left;"/>
+<div class ="container">
+
 </div>
+
 
 <div class="container">
     <div class="row">
