--- a/webapp/larryslist/website/static/less/index.less
+++ b/webapp/larryslist/website/static/less/index.less
@@ -31,10 +31,16 @@
   }
 }
 .press-logos {
+margin-left:169;
+margin-right:169;
+width:940px;
+padding-top:5px;
+padding-bottom:15px;
+margin-bottom:210px;
+
 img {
 	margin-left:10px;
 	margin-right:10px;
-	
 	}
 }
 .profile-count-band {
@@ -42,7 +48,7 @@ img {
   background:#f3f3f3;
   padding:15px 0;
   margin-top:170px;
-  margin-bottom:280px;
+  margin-bottom:30px;
   font-size:@largerFontSize;
   border:1px solid #a4a4a4;
   border-radius:10px;
