--- a/webapp/larryslist/website/static/less/index.less
+++ b/webapp/larryslist/website/static/less/index.less
@@ -42,6 +42,11 @@ img {
 	margin-left:10px;
 	margin-right:10px;
 	}
+h3 {
+    margin-left:20px;
+    line-height:90%;
+    float:left;
+  }	
 }
 .profile-count-band {
   xtext-align:center;
