--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -41,10 +41,8 @@ ${self.searchForm()}
 <div class ="container">
   <div class="row">
           <div class="span12 press-logos">
-	  	    <img src="${STATIC_URL}img/press_forbes.jpg" style="float:left;"/>
-	  	    <img src="${STATIC_URL}img/press_bloomberg.jpg" style="float:left;"/>
-	  		<img src="${STATIC_URL}img/press_chicagotribune.jpg" style="float:left;"/>
-	  		<img src="${STATIC_URL}img/press_artinfo.jpg" style="float:left;"/>
+          	<h3> Featured in </h3>
+	  	    <img src="${STATIC_URL}img/larrys_press_list.jpg" style="float:left;"/>
     	  </div>
   		</div>
     </div>
