press list added

--- a/webapp/larryslist/website/templates/index.html
+++ b/webapp/larryslist/website/templates/index.html
@@ -41,7 +41,7 @@ ${self.searchForm()}
 <div class ="container">
   <div class="row">
           <div class="span12 press-logos">
-          	<h3> Featured in </h3>
+          	<p> Featured in </p>
 	  	    <img src="${STATIC_URL}img/larrys_press_list.jpg" style="float:left;"/>
     	  </div>
   		</div>
