--- a/webapp/larryslist/website/static/less/index.less
+++ b/webapp/larryslist/website/static/less/index.less
@@ -37,17 +37,18 @@ width:940px;
 padding-top:5px;
 padding-bottom:15px;
 margin-bottom:210px;
+}
 
-img {
+.press-logos img {
 	margin-left:10px;
 	margin-right:10px;
 	}
-p {
+.press-logos p {
     margin-left:20px;
     line-height:90%;
     float:left;
   }	
-}
+
 .profile-count-band {
   xtext-align:center;
   background:#f3f3f3;
