--- a/webapp/larryslist/website/static/less/index.less
+++ b/webapp/larryslist/website/static/less/index.less
@@ -44,6 +44,7 @@ margin-bottom:210px;
 	margin-right:10px;
 	}
 .press-logos p {
+	margin-top:10px;
     margin-left:20px;
     line-height:90%;
     float:left;
